fix(Table): fix cell border not showing

--- a/src/less/table.less
+++ b/src/less/table.less
@@ -85,6 +85,7 @@
     white-space: normal;
     background: @body-background;
     transition: none;
+    box-sizing: border-box;
 
     &.first {
       border-left-width: 0;
@@ -101,6 +102,7 @@
     }
     &-content {
       padding: 8px;
+      box-sizing: border-box;
 
       .ellipsis();
     }
